--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # The target environment that will be tested.
 # Possible values are dev, qa, demo.
-TEST_ENVIRONMENT=demo
+TEST_ENVIRONMENT=dev
 
 # Set to true to test Ozone Pro, false to test Ozone FOSS.
 TEST_PRO=true
