--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,8 @@
 name: Publish to NPM Registry
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - '1.0.0-*'
+  release:
+    types: [published]
 
 jobs:
   publish:
