--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,33 @@
-name: Publish to NPM repository
+name: Publish to NPM Registry
 
 on:
-  push:
-    branches:
-      - main
   release:
-    types:
-      - created
+    types: [published]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          registry-url: 'https://nexus.mekomsolutions.net/repository/npm-public/'
+          node-version: '20'
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Publish to NPM repository
-        run: yarn publish
+      - name: Authenticate with Nexus NPM registry
+        run: |
+          REGISTRY_URL="${NPM_REGISTRY_URL#https://}"
+          echo "//${REGISTRY_URL}:_authToken=${NPM_AUTH_TOKEN}" > ~/.npmrc
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NPM_REGISTRY_URL: ${{ vars.NPM_REGISTRY_URL }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        shell: bash
+
+      - name: Publish to registry
+        run: npm publish
