--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "ozone-pro": "npx playwright test",
-    "ozone-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite",
+    "ozone-e2e": "npx playwright test",
     "openmrs-distro-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
