OZ-946: Set environment variables at runtime

--- a/.env
+++ b/.env
@@ -5,82 +5,67 @@
 
 # The target environment that will be tested.
 # Possible values are dev, qa, demo.
-TEST_ENVIRONMENT=dev
-
-# Set to true to test Ozone Pro, false to test Ozone FOSS.
-TEST_PRO=true
+TEST_ENVIRONMENT=
 
 #
 # Ozone HIS URLs for dev, qa and demo environments.
 #
 
 # OpenMRS
-O3_URL_DEV=https://ozone-dev.mekomsolutions.net
-O3_URL_QA=https://ozone-qa.mekomsolutions.net
-O3_URL_DEMO=https://demo.ozone-his.com
+O3_URL_DEV=
+O3_URL_QA=
+O3_URL_DEMO=
 
 # ERPNEXT
-ERPNEXT_URL_DEV=https://erpnext.ozone-dev.mekomsolutions.net
-ERPNEXT_URL_QA=https://erpnext.ozone-qa.mekomsolutions.net
-ERPNEXT_URL_DEMO=https://erpnext.demo.ozone-his.com
-
-# Odoo
-ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
-ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
-ODOO_URL_DEMO=https://erp.demo.ozone-his.com
-
-# Orthanc
-ORTHANC_URL_DEV=https://pacs.ozone-dev.mekomsolutions.net
-ORTHANC_URL_QA=https://pacs.ozone-qa.mekomsolutions.net
-ORTHANC_URL_DEMO=https://pacs.demo.ozone-his.com
-
-# SENAITE
-SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
-SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
-SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
-
-# Superset
-SUPERSET_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
-SUPERSET_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
-SUPERSET_URL_DEMO=https://analytics.demo.ozone-his.com
+ERPNEXT_URL_DEV=
+ERPNEXT_URL_QA=
+ERPNEXT_URL_DEMO=
 
 # Keycloak
-KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
-KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
-KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
+KEYCLOAK_URL_DEV=
+KEYCLOAK_URL_QA=
+KEYCLOAK_URL_DEMO=
+
+# Odoo
+ODOO_URL_DEV=
+ODOO_URL_QA=
+ODOO_URL_DEMO=
+
+# Orthanc
+ORTHANC_URL_DEV=
+ORTHANC_URL_QA=
+ORTHANC_URL_DEMO=
+
+# SENAITE
+SENAITE_URL_DEV=
+SENAITE_URL_QA=
+SENAITE_URL_DEMO=
+
+# Superset
+SUPERSET_URL_DEV=
+SUPERSET_URL_QA=
+SUPERSET_URL_DEMO=
 
 #
-# Ozone HIS credentials for FOSS and Pro
+# Ozone HIS credentials
 #
-
-# OpenMRS test user credentials for FOSS
-O3_USERNAME_ON_FOSS=admin
-O3_PASSWORD_ON_FOSS=Admin123
 
 # ERPNext test user credentials
-ERPNEXT_USERNAME=Administrator
-ERPNEXT_PASSWORD=password
+ERPNEXT_USERNAME=
+ERPNEXT_PASSWORD=
 
-# Orthanc test user credentials
-ORTHANC_USERNAME=orthanc
-ORTHANC_PASSWORD=orthanc
-
-# Odoo test user credentials for FOSS
-ODOO_USERNAME_ON_FOSS=admin
-ODOO_PASSWORD_ON_FOSS=admin
-
-# SENAITE test user credentials for FOSS
-SENAITE_USERNAME_ON_FOSS=admin
-SENAITE_PASSWORD_ON_FOSS=password
-
-# SUPERSET test user credentials for FOSS
-SUPERSET_USERNAME_ON_FOSS=admin
-SUPERSET_PASSWORD_ON_FOSS=password
-
-# (Pro only) Ozone test user credentials
-OZONE_USERNAME=jdoe
-OZONE_PASSWORD=password
-
-# (Pro only) Keycloak admin test user credentials
+# Keycloak test user credentials
 KEYCLOAK_USERNAME=
 KEYCLOAK_PASSWORD=
+
+# Odoo test user credentials
+ODOO_USERNAME=
+ODOO_PASSWORD=
+
+# Orthanc test user credentials
+ORTHANC_USERNAME=
+ORTHANC_PASSWORD=
+
+# Ozone test user credentials
+OZONE_USERNAME=
+OZONE_PASSWORD=
