--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "ozone-e2e": "npx playwright test keycloak-senaite",
+    "ozone-e2e": "npx playwright test",
     "openmrs-distro-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
     "registry": "https://nexus.mekomsolutions.net/repository/npm-public/"
   },
   "keywords": [],
-  "author": "",
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.10.2",
