Test dev server

--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@
 
 # The target environment that will be tested.
 # Possible values are dev, qa, demo.
-TEST_ENVIRONMENT=
+TEST_ENVIRONMENT=dev
 
 #
 # Ozone HIS URLs for dev, qa and demo environments.
 #
 
 # OpenMRS
-O3_URL_DEV=
+O3_URL_DEV=https://ozone-dev.mekomsolutions.net
 O3_URL_QA=
 O3_URL_DEMO=
 
@@ -22,7 +22,7 @@ ERPNEXT_URL_QA=
 ERPNEXT_URL_DEMO=
 
 # Keycloak
-KEYCLOAK_URL_DEV=
+KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
 KEYCLOAK_URL_QA=
 KEYCLOAK_URL_DEMO=
 
@@ -37,7 +37,7 @@ ORTHANC_URL_QA=
 ORTHANC_URL_DEMO=
 
 # SENAITE
-SENAITE_URL_DEV=
+SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
 SENAITE_URL_QA=
 SENAITE_URL_DEMO=
 
@@ -55,8 +55,8 @@ ERPNEXT_USERNAME=
 ERPNEXT_PASSWORD=
 
 # Keycloak test user credentials
-KEYCLOAK_USERNAME=
-KEYCLOAK_PASSWORD=
+KEYCLOAK_USERNAME=admin
+KEYCLOAK_PASSWORD=password
 
 # Odoo test user credentials
 ODOO_USERNAME=
