--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "ozone-e2e": "npx playwright test keycloak-openmrs",
+    "ozone-e2e": "npx playwright test keycloak-odoo",
     "openmrs-distro-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
